# simple-routing-visualizer

./: .gitignore  NavForm.Designer.cs  NavForm.cs  Program.cs  README.md  RoutingVisualizer.csproj
Simple.NET/GeoData/: Coord.cs  CoordArray.cs  CoordArrayEnumerator.cs  GeoJsonPolygon.cs  ICoordArray.cs  ValuePointD.cs
osm2graph/: parser.py
src/: GraphMap.cs  IMap.cs  MapInterface.cs  NavForm.Designer.cs  NavForm.resx  RoutingVisualizer.csproj  UtilityMap.cs
src/GeoData/: ColorFactory.cs  Coord.cs  CoordArray.cs  CoordArrayEnumerator.cs  CoordEnumerator.cs  Distance.cs  GeoJsonLineString.cs  GeoJsonPoint.cs  GeoJsonPolygon.cs  ICoord.cs  ICoordArray.cs  Line.cs  LineD.cs  Point.cs  PointCloudD.cs  PointD.cs  Polygon.cs  PolygonD.cs  Raster.cs  RasterImage.cs  ValuePointD.cs  Way.cs
src/IsoRaster/: IProjection.cs  IRasterizer.cs  SPTConsumer.cs
src/Maps/: GeometryContainer.cs  GraphMap.cs  IMap.cs  UtilityMap.cs
src/RoutingGraph/: AStar.cs  BasicAStar.cs  BasicEdge.cs  BasicGraph.cs  BasicNode.cs  BidirectAStar.cs  BidirectDjkstra.cs  DBAStar.cs  DBBidirectAStar.cs  DBGraph.cs  DBGraphEdge.cs  DBGraphNode.cs  Djkstra.cs  FastBidirectAStar.cs  Graph.cs  IEdge.cs  (+6 more)
util/: parser.py
util/osm2graph/: .gitignore  .gitignore.txt  CMakeLists.txt  osm2graph.cpp
util/osm2graph/include/osmium/util/: file.hpp
util/osm2graph/src/: osm2graph.cpp
web-api/: Application.cs  IsoRasterController.cs  MultiGraphController.cs  RoutingController.cs
web-app/: README.md  app.js  index.html  layers.js  package-lock.json  style.css  styles.js  tests.js  util.js  vite.config.js
(+631 files in other folders)
